@@ -1,3 +1,6 @@
+
+2025 Modified by Jean-Marc Lienher for python and gtk3
+
 ------------------------
 the Virtual USB Analyzer
 ------------------------
