@@ -10,9 +10,12 @@
 VERSION = "1.1"
 
 import sys, os, gi
+gi.require_version('Gtk', '3.0')
+from gi.repository import Gtk as gtk
+gi.require_version('Gdk', '3.0')
+from gi.repository import Gdk
 from VUsbTools import Views, Log, Diff, Decode
 
-from gi.repostory import gtk 
 
 def main(filename, tailMode=False):
     ui = Views.MainWindow()
@@ -25,7 +28,7 @@ def main(filename, tailMode=False):
                             ui.status.progressQueue, tailMode)
     Decode.attachView(ui)
 
-    gtk.gdk.threads_init()
+    Gdk.threads_init()
     follower.start()
     try:
         gtk.main()
@@ -38,7 +41,7 @@ def diffMain(files, tailMode=False):
     ui.window.set_title("%s - VUsb Analyzer" % " / ".join([
         os.path.basename(f) for f in files]))
 
-    gtk.gdk.threads_init()
+    Gdk.threads_init()
     followers = []
 
     for f, view in zip(files, ui.views):
@@ -56,7 +59,7 @@ def diffMain(files, tailMode=False):
             follower.stop()
 
 def usage():
-    print ("usage: %s [-t] <log> [<log>]\n"
+    print(("usage: %s [-t] <log> [<log>]\n"
            "\n"
            "PyGTK frontend for the virtual USB analyzer\n"
            "Micah Elizabeth Scott <micah@vmware.com>\n"
@@ -79,7 +82,7 @@ def usage():
            "\n"
            "Two log files can be specified, in order to invoke\n"
            "diff mode.\n"
-           % (sys.argv[0], VERSION))
+           % (sys.argv[0], VERSION)))
     sys.exit(1)
 
 if __name__ == "__main__":
@@ -98,5 +101,3 @@ if __name__ == "__main__":
         main(args[0], tailMode)
     elif len(args) == 2:
         diffMain(args, tailMode)
-    else:
-        usage()
